--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Miguel Ortiz</h1>
-    <h2>Welcome to my First WebPage</h2>
+    <h2>Welcome to my Second (Not First) WebPage</h2>
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente
       expedita illo nesciunt magnam totam distinctio nemo est! Ratione
@@ -18,7 +18,7 @@
       ducimus debitis delectus.
     </p>
     <img
-      style="max-height: 150px"
+      style="max-height: 200px"
       src="https://images.pexels.com/photos/1543793/pexels-photo-1543793.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
       alt=""
     />
