--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
       src="https://images.pexels.com/photos/1543793/pexels-photo-1543793.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
       alt=""
     />
+    <h3>Miguel Ortiz</h3>
   </body>
 </html>
